extra padding for code blocks w/ copy button (prevent overlap)

--- a/src/resources/formats/html/_quarto-rules.scss
+++ b/src/resources/formats/html/_quarto-rules.scss
@@ -56,6 +56,10 @@ pre > code.sourceCode {
   white-space: pre-wrap;
 }
 
+pre.sourceCode.code-with-copy {
+  padding-right: 25px;
+}
+
 .code-copy-button {
   position: absolute;
   top: 0;
